tests/specs/check/unstable_suggestion/main.out
Check file:///[WILDLINE]main.ts
error: TS2339 [ERROR]: Property 'listenDatagram' does not exist on type 'typeof Deno'. 'Deno.listenDatagram' is an unstable API. If not, try changing the 'lib' compiler option to include 'deno.unstable' or add a triple-slash directive to the top of your entrypoint (main file): /// <reference lib="deno.unstable" />
Deno.listenDatagram({
     ~~~~~~~~~~~~~~
    at file:///[WILDLINE]/main.ts:5:6
